Add code for links when open in new window

--- a/about.html
+++ b/about.html
@@ -71,16 +71,16 @@
                 <!-- Social Banner -->
                 <div class="row banner-imager-social" >
                     <div class="col-3 col-sm-3 col-md-2">
-                        <a href="https://www.linkedin.com/in/franciskadutoit" target="_blank"> <i class="fab fa-linkedin-in" aria-hidden="true"></i> <span class="sr-only">Linkedin</span></a>
+                        <a href="https://www.linkedin.com/in/franciskadutoit" target="_blank" rel="noopener noreferrer"> <i class="fab fa-linkedin-in" aria-hidden="true"></i> <span class="sr-only">Linkedin</span></a>
                     </div>
                     <div class="col-3 col-sm-3 col-md-2">
-                        <a href="https://www.instagram.com/designed.byfranciska/" target="_blank"> <i class="fab fa-instagram " aria-hidden="true"></i> <span class="sr-only">Instagram</span></a> 
+                        <a href="https://www.instagram.com/designed.byfranciska/" target="_blank" rel="noopener noreferrer"> <i class="fab fa-instagram " aria-hidden="true"></i> <span class="sr-only">Instagram</span></a> 
                     </div>
                     <div class="col-3 col-sm-3 col-md-2">
-                        <a href="https://twitter.com/FranciskaDuToit" target="_blank"> <i class="fab fa-twitter " aria-hidden="true"></i> <span class="sr-only">Twitter</span></a> 
+                        <a href="https://twitter.com/FranciskaDuToit" target="_blank" rel="noopener noreferrer"> <i class="fab fa-twitter " aria-hidden="true"></i> <span class="sr-only">Twitter</span></a> 
                     </div>
                     <div class="col-3 col-sm-3 col-md-2">
-                        <a href="https://www.pinterest.ie/franciskadtt/_saved/" target="_blank"> <i class="fab fa-pinterest-p " aria-hidden="true"></i> <span class="sr-only">Pinterest</span></a> 
+                        <a href="https://www.pinterest.ie/franciskadtt/_saved/" target="_blank" rel="noopener noreferrer"> <i class="fab fa-pinterest-p " aria-hidden="true"></i> <span class="sr-only">Pinterest</span></a> 
                     </div>
                 </div>
                 <!-- Social Banner end -->
@@ -257,7 +257,7 @@
                                     In progress
                                     </h5>
                                     <div class="bullet-qual">
-                                        <a href="https://codeinstitute.net/full-stack-software-development-diploma/" target="_blank" class="bullet-qual-icon">
+                                        <a href="https://codeinstitute.net/full-stack-software-development-diploma/" target="_blank"  class="bullet-qual-icon" rel="noopener noreferrer" >
                                         <img src="assets/images/franciska_du_toit_code-institute-logo.png" width="25" alt="">
                                         </a>
                                         <div class="bullet-qual-text">Diploma in Full-Stack Software Development
@@ -271,28 +271,28 @@
                                     Completed
                                     </h5>
                                     <div class="bullet-qual">
-                                        <a href="https://www.uxdesigninstitute.com/" target="_blank" class="bullet-qual-icon">
+                                        <a href="https://www.uxdesigninstitute.com/" target="_blank" class="bullet-qual-icon" rel="noopener noreferrer">
                                         <img src="assets/images/franciska_du_toit_flyux-project.png" width="25" alt="">
                                         </a>
                                         <div class="bullet-qual-text">Professional Diploma in UX Design
                                         </div>
                                     </div>
                                     <div class="bullet-qual">
-                                        <a href="https://www.getsmarter.com/products/uct-digital-marketing-online-short-course" target="_blank" class="bullet-qual-icon">
+                                        <a href="https://www.getsmarter.com/products/uct-digital-marketing-online-short-course" target="_blank" class="bullet-qual-icon" rel="noopener noreferrer">
                                         <img src="assets/images/franciska_du_toit_UCT-logo.png" width="25" alt="">
                                         </a>
                                     <div class="bullet-qual-text">Certificate in Digital Marketing
                                     </div>
                                     </div>
                                     <div class="bullet-qual">
-                                        <a href="https://www.getsmarter.com/products/uct-project-management-foundations-online-short-course" target="_blank" class="bullet-qual-icon">
+                                        <a href="https://www.getsmarter.com/products/uct-project-management-foundations-online-short-course" target="_blank" class="bullet-qual-icon" rel="noopener noreferrer">
                                         <img src="assets/images/franciska_du_toit_UCT-logo.png" width="25" alt="">
                                         </a>
                                         <div class="bullet-qual-text">Certificate in Project Management
                                         </div>
                                     </div>
                                     <div class="bullet-qual">
-                                        <a href="https://www3.unifr.ch/ius/llm/en/" target="_blank" class="bullet-qual-icon">
+                                        <a href="https://www3.unifr.ch/ius/llm/en/" target="_blank" class="bullet-qual-icon" rel="noopener noreferrer">
                                         <img src="assets/images/franciska_du_toit_university-of-fribourg-logo.png" width="25" alt="">
                                         </a>
                                         <div class="bullet-qual-text">Masters in Cross Cultural Business Practice
@@ -305,7 +305,7 @@
                             <!-- CV pdf download- Original credit with modifications: Code Institute Lessons on UCD Resume */-->
                             <div>
                                 <p class="cv-text">Download a full PDF version of my CV
-                                    <a href="assets/documents/franciska-du-toit-cv-2021.pdf" target="_blank" class="cv-pdf">
+                                    <a href="assets/documents/franciska-du-toit-cv-2021.pdf" target="_blank" class="cv-pdf" rel="noopener noreferrer">
                                     <i class="fa fa-download" aria-hidden="true"></i>
                                         <span class="sr-only">Download link.</span>
                                     </a>
