--- a/developerprojects.html
+++ b/developerprojects.html
@@ -22,8 +22,8 @@
 </head>
 
 <body>
-    <!-- Nav Menu Section Code from Bootstrap-->
-    <div class="site-header"> 
+<!-- Nav Menu Section Code from Bootstrap-->
+    <header class="site-header"> 
 	<nav class="navbar navbar-expand-md fixed-top navbar-dark ">
 		<div class="container-fluid">
 			<a class="navbar-brand" href="index.html">Franciska Du Toit</a>
@@ -55,7 +55,7 @@
 			</div>
 		</div>
 	</nav>
-    </div>
+    </header>
     <!-- Nav Menu end -->
 
     <div class="container-fluid">
