--- a/developerprojects.html
+++ b/developerprojects.html
@@ -70,16 +70,24 @@
                 <!-- Social Banner -->
                 <div class="row banner-imager-social" >
                     <div class="col-3 col-sm-3 col-md-2">
-                        <a href="https://www.linkedin.com/in/franciskadutoit" target="_blank" rel="noopener noreferrer"> <i class="fab fa-linkedin-in" aria-hidden="true"></i> <span class="sr-only">Linkedin</span></a>
+                        <a href="https://www.linkedin.com/in/franciskadutoit" target="_blank" rel="noopener noreferrer"> <i class="fab fa-linkedin-in" aria-hidden="true"></i>
+                            <span class="sr-only">Linkedin</span>
+                        </a>
                     </div>
                     <div class="col-3 col-sm-3 col-md-2">
-                        <a href="https://www.instagram.com/designed.byfranciska/" target="_blank" rel="noopener noreferrer"> <i class="fab fa-instagram " aria-hidden="true"></i> <span class="sr-only">Instagram</span></a> 
+                        <a href="https://www.instagram.com/designed.byfranciska/" target="_blank" rel="noopener noreferrer"> <i class="fab fa-instagram " aria-hidden="true"></i> 
+                            <span class="sr-only">Instagram</span>
+                        </a> 
                     </div>
                     <div class="col-3 col-sm-3 col-md-2">
-                        <a href="https://twitter.com/FranciskaDuToit" target="_blank" rel="noopener noreferrer"> <i class="fab fa-twitter " aria-hidden="true"></i> <span class="sr-only">Twitter</span></a> 
+                        <a href="https://twitter.com/FranciskaDuToit" target="_blank" rel="noopener noreferrer"> <i class="fab fa-twitter " aria-hidden="true"></i> 
+                            <span class="sr-only">Twitter</span>
+                        </a> 
                     </div>
                     <div class="col-3 col-sm-3 col-md-2">
-                        <a href="https://www.pinterest.ie/franciskadtt/_saved/" target="_blank" rel="noopener noreferrer"> <i class="fab fa-pinterest-p " aria-hidden="true"></i> <span class="sr-only">Pinterest</span></a> 
+                        <a href="https://www.pinterest.ie/franciskadtt/_saved/" target="_blank" rel="noopener noreferrer"> <i class="fab fa-pinterest-p " aria-hidden="true"></i>
+                            <span class="sr-only">Pinterest</span>
+                        </a> 
                     </div>
                 </div>
                 <!-- Social Banner end -->
@@ -91,16 +99,17 @@
                 <div class="container-fluid container-custom">
                     <div class="row">
                         <div class="col-12">
-                        <div class="intro-content">
-                            <!-- Intro text end-->
-                            <h1 class="ux-heading" > Developer portfolio </h1>
-                            <p > I have recently started my journey as a software developer. Check out my latest software development portfolio projects</p>
-                            <!-- Intro text end-->
-                        </div>
+                            <div class="intro-content">
+                                <!-- Intro text end-->
+                                <h1 class="ux-heading" > Developer portfolio </h1>
+                                <p > I have recently started my journey as a software developer. Check out my latest software development portfolio projects</p>
+                                <!-- Intro text end-->
+                            </div>
                         </div>
                         <div class="container ui-container">
                             <div class="row">
                                 <div class="col-12">
+                                    <!-- Project 1 -->
                                     <div class="container">
                                         <div class="row ui-row">
                                             <div class="col-sm-12 col-md-4">
@@ -117,6 +126,7 @@
                                             </div>
                                         </div>
                                     </div>
+                                    <!-- Project 1 end -->
                                 </div>
                             </div>
                         </div>
@@ -127,9 +137,10 @@
         </div>
     </div>
 
-    <!-- Scripts -->  
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
-​   <!-- Scripts End -->   
+<!-- Scripts -->   
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/js/bootstrap.min.js"></script>
+<!-- Scripts End -->     
 </body>
 </html>
