Fix indentation and structure for otherprojects file

--- a/otherprojects.html
+++ b/otherprojects.html
@@ -64,43 +64,54 @@
 			<div class="col-sm-12 col-md-12 col-lg-6" id="home"> 
                 <!-- Hero-image -->
 				<div class="row">
-					<img class="banner-image" src="./assets/images/franciska_du_toit_otherprojects.jpg" alt="Stationary on table"/>
+					<img class="banner-image" src="./assets/images/franciska_du_toit_codingprojects.jpg"/>
                 </div>
                 <!-- Hero-image end -->
                 <!-- Social Banner -->
                 <div class="row banner-imager-social" >
                     <div class="col-3 col-sm-3 col-md-2">
-                        <a href="https://www.linkedin.com/in/franciskadutoit" target="_blank" rel="noopener noreferrer"> <i class="fab fa-linkedin-in" aria-hidden="true"></i> <span class="sr-only">Linkedin</span></a>
+                        <a href="https://www.linkedin.com/in/franciskadutoit" target="_blank" rel="noopener noreferrer"> <i class="fab fa-linkedin-in" aria-hidden="true"></i>
+                            <span class="sr-only">Linkedin</span>
+                        </a>
                     </div>
                     <div class="col-3 col-sm-3 col-md-2">
-                        <a href="https://www.instagram.com/designed.byfranciska/" target="_blank" rel="noopener noreferrer"> <i class="fab fa-instagram " aria-hidden="true"></i> <span class="sr-only">Instagram</span></a> 
+                        <a href="https://www.instagram.com/designed.byfranciska/" target="_blank" rel="noopener noreferrer"> <i class="fab fa-instagram " aria-hidden="true"></i> 
+                            <span class="sr-only">Instagram</span>
+                        </a> 
                     </div>
                     <div class="col-3 col-sm-3 col-md-2">
-                        <a href="https://twitter.com/FranciskaDuToit" target="_blank" rel="noopener noreferrer"> <i class="fab fa-twitter " aria-hidden="true"></i> <span class="sr-only">Twitter</span></a> 
+                        <a href="https://twitter.com/FranciskaDuToit" target="_blank" rel="noopener noreferrer"> <i class="fab fa-twitter " aria-hidden="true"></i> 
+                            <span class="sr-only">Twitter</span>
+                        </a> 
                     </div>
                     <div class="col-3 col-sm-3 col-md-2">
-                        <a href="https://www.pinterest.ie/franciskadtt/_saved/" target="_blank" rel="noopener noreferrer"> <i class="fab fa-pinterest-p " aria-hidden="true"></i> <span class="sr-only">Pinterest</span></a> 
+                        <a href="https://www.pinterest.ie/franciskadtt/_saved/" target="_blank" rel="noopener noreferrer"> <i class="fab fa-pinterest-p " aria-hidden="true"></i>
+                            <span class="sr-only">Pinterest</span>
+                        </a> 
                     </div>
                 </div>
                 <!-- Social Banner end -->
             </div>
             <!-- Banner section End -->
+
             <!-- Content Section -->
             <div class="col-sm-12 col-md-12 col-lg-6 split-content"> 
                 <div class="container-fluid container-custom">
                     <div class="row">
                         <div class="col-12">
-                        <div class="intro-content">
                             <!-- Intro text end-->
-                            <h1 class="ux-heading" > Other Projects </h1>
-                            <p class="sub-paragraph"> Over the last few years I have been working on a variety of projects either part of my previous roles or on the side. Here you will find some of those projects.</p>
+                            <div class="intro-content">
+                                <h1 class="ux-heading" > Other Projects </h1>
+                                <p class="sub-paragraph"> Over the last few years I have been working on a variety of projects either part of my previous roles or on the side. Here you will find some of those projects.</p>
+                            </div>
                             <!-- Intro text end-->
-                        </div>
                         </div>
                         <div class="container ui-container">
                             <div class="row">
                                 <div class="col-12">
+                                    <!-- Projects -->
                                     <div class="container">
+                                        <!-- Project Synergy -->
                                         <div class="row ui-row">
                                             <div class="col-sm-12 col-md-12">
                                                 <h2 class="other-subheading">Project Synergy at Sanlam
@@ -113,6 +124,8 @@
                                                 <img src="assets/images/franciska_du_toit_synergyproject.png" class="code-img" alt="project synergy screenshot">
                                             </div>
                                         </div>
+                                        <!-- Project Synergy End -->
+                                        <!-- Project Fincede -->
                                         <div class="row ui-row ">
                                             <div class="col-sm-12 col-md-12">
                                                 <h2 class="other-subheading">Fincede Business Website
@@ -125,6 +138,8 @@
                                                 <img src="assets/images/franciska_du_toit_fincedeproject.png" class="code-img" alt="fincede website">
                                             </div>
                                         </div>
+                                        <!-- Project Fincede End -->
+                                        <!-- Project Conversations -->
                                         <div class="row ui-row ">
                                             <div class="col-sm-12 col-md-12">
                                                 <h2 class="other-subheading">Sanlam Conversations with Clients Project
@@ -137,6 +152,8 @@
                                                 <img src="assets/images/franciska_du_toit_conversationsproject.png" class="code-img" alt="fincede website">
                                             </div>
                                         </div>
+                                        <!-- Project Conversations End -->
+                                        <!-- Project Leasehub -->
                                         <div class="row ui-row ">
                                             <div class="col-sm-12 col-md-12">
                                                 <h2 class="other-subheading">Leasing Hub at Quadient
@@ -149,7 +166,9 @@
                                                 <img src="assets/images/franciska_du_toit_leasehubproject.png" class="code-img" alt="fincede website">
                                             </div>
                                         </div>
+                                        <!-- Project Leasehub End -->
                                     </div>
+                                    <!-- Projects end -->
                                 </div>
                             </div>
                         </div>
@@ -160,10 +179,10 @@
         </div>
     </div>
 
-    <!-- Scripts -->   
+<!-- Scripts -->   
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <!-- Scripts End -->   
+<!-- Scripts End -->     
 </body>
 </html>
