Fix indentation and structure for developerprojects file

--- a/developerprojects.html
+++ b/developerprojects.html
@@ -109,8 +109,9 @@
                         <div class="container ui-container">
                             <div class="row">
                                 <div class="col-12">
-                                    <!-- Project 1 -->
+                                    <!-- Projects -->
                                     <div class="container">
+                                        <!-- Project 1 -->
                                         <div class="row ui-row">
                                             <div class="col-sm-12 col-md-4">
                                                 <h2 class="ui-subheading">Resume website
@@ -125,8 +126,9 @@
                                                 </a>
                                             </div>
                                         </div>
+                                        <!-- Project 1 end -->
                                     </div>
-                                    <!-- Project 1 end -->
+                                    <!-- Projects end -->
                                 </div>
                             </div>
                         </div>
