--- a/about.html
+++ b/about.html
@@ -65,27 +65,36 @@
 			<div class="col-sm-12 col-md-12 col-lg-6" id="home"> 
                 <!-- Hero-image -->
 				<div class="row">
-					<img class="banner-image" src="./assets/images/franciska_du_toit_aboutpage_image.jpg"/>
+					<img class="banner-image" src="./assets/images/franciska_du_toit_codingprojects.jpg"/>
                 </div>
                 <!-- Hero-image end -->
                 <!-- Social Banner -->
                 <div class="row banner-imager-social" >
                     <div class="col-3 col-sm-3 col-md-2">
-                        <a href="https://www.linkedin.com/in/franciskadutoit" target="_blank" rel="noopener noreferrer"> <i class="fab fa-linkedin-in" aria-hidden="true"></i> <span class="sr-only">Linkedin</span></a>
+                        <a href="https://www.linkedin.com/in/franciskadutoit" target="_blank" rel="noopener noreferrer"> <i class="fab fa-linkedin-in" aria-hidden="true"></i>
+                            <span class="sr-only">Linkedin</span>
+                        </a>
                     </div>
                     <div class="col-3 col-sm-3 col-md-2">
-                        <a href="https://www.instagram.com/designed.byfranciska/" target="_blank" rel="noopener noreferrer"> <i class="fab fa-instagram " aria-hidden="true"></i> <span class="sr-only">Instagram</span></a> 
+                        <a href="https://www.instagram.com/designed.byfranciska/" target="_blank" rel="noopener noreferrer"> <i class="fab fa-instagram " aria-hidden="true"></i> 
+                            <span class="sr-only">Instagram</span>
+                        </a> 
                     </div>
                     <div class="col-3 col-sm-3 col-md-2">
-                        <a href="https://twitter.com/FranciskaDuToit" target="_blank" rel="noopener noreferrer"> <i class="fab fa-twitter " aria-hidden="true"></i> <span class="sr-only">Twitter</span></a> 
+                        <a href="https://twitter.com/FranciskaDuToit" target="_blank" rel="noopener noreferrer"> <i class="fab fa-twitter " aria-hidden="true"></i> 
+                            <span class="sr-only">Twitter</span>
+                        </a> 
                     </div>
                     <div class="col-3 col-sm-3 col-md-2">
-                        <a href="https://www.pinterest.ie/franciskadtt/_saved/" target="_blank" rel="noopener noreferrer"> <i class="fab fa-pinterest-p " aria-hidden="true"></i> <span class="sr-only">Pinterest</span></a> 
+                        <a href="https://www.pinterest.ie/franciskadtt/_saved/" target="_blank" rel="noopener noreferrer"> <i class="fab fa-pinterest-p " aria-hidden="true"></i>
+                            <span class="sr-only">Pinterest</span>
+                        </a> 
                     </div>
                 </div>
                 <!-- Social Banner end -->
             </div>
             <!-- Banner section End -->
+
             <!-- Content Section -->
 			<div class="col-sm-12 col-md-12 col-lg-6 split-content"> 
                 <div class="container-fluid container-custom">
