Fix indentation and structure for uichallenges file

--- a/uichallenges.html
+++ b/uichallenges.html
@@ -64,27 +64,36 @@
 			<div class="col-sm-12 col-md-12 col-lg-6" id="home"> 
                 <!-- Hero-image -->
 				<div class="row">
-					<img class="banner-image" src="./assets/images/franciska_du_toit_uipage.jpg"/>
+					<img class="banner-image" src="./assets/images/franciska_du_toit_codingprojects.jpg"/>
                 </div>
                 <!-- Hero-image end -->
                 <!-- Social Banner -->
                 <div class="row banner-imager-social" >
                     <div class="col-3 col-sm-3 col-md-2">
-                        <a href="https://www.linkedin.com/in/franciskadutoit" target="_blank" rel="noopener noreferrer"> <i class="fab fa-linkedin-in" aria-hidden="true"></i> <span class="sr-only">Linkedin</span></a>
+                        <a href="https://www.linkedin.com/in/franciskadutoit" target="_blank" rel="noopener noreferrer"> <i class="fab fa-linkedin-in" aria-hidden="true"></i>
+                            <span class="sr-only">Linkedin</span>
+                        </a>
                     </div>
                     <div class="col-3 col-sm-3 col-md-2">
-                        <a href="https://www.instagram.com/designed.byfranciska/" target="_blank" rel="noopener noreferrer"> <i class="fab fa-instagram " aria-hidden="true"></i> <span class="sr-only">Instagram</span></a> 
+                        <a href="https://www.instagram.com/designed.byfranciska/" target="_blank" rel="noopener noreferrer"> <i class="fab fa-instagram " aria-hidden="true"></i> 
+                            <span class="sr-only">Instagram</span>
+                        </a> 
                     </div>
                     <div class="col-3 col-sm-3 col-md-2">
-                        <a href="https://twitter.com/FranciskaDuToit" target="_blank" rel="noopener noreferrer"> <i class="fab fa-twitter " aria-hidden="true"></i> <span class="sr-only">Twitter</span></a> 
+                        <a href="https://twitter.com/FranciskaDuToit" target="_blank" rel="noopener noreferrer"> <i class="fab fa-twitter " aria-hidden="true"></i> 
+                            <span class="sr-only">Twitter</span>
+                        </a> 
                     </div>
                     <div class="col-3 col-sm-3 col-md-2">
-                        <a href="https://www.pinterest.ie/franciskadtt/_saved/" target="_blank" rel="noopener noreferrer"> <i class="fab fa-pinterest-p " aria-hidden="true"></i> <span class="sr-only">Pinterest</span></a> 
+                        <a href="https://www.pinterest.ie/franciskadtt/_saved/" target="_blank" rel="noopener noreferrer"> <i class="fab fa-pinterest-p " aria-hidden="true"></i>
+                            <span class="sr-only">Pinterest</span>
+                        </a> 
                     </div>
                 </div>
                 <!-- Social Banner end -->
             </div>
             <!-- Banner section End -->
+
             <!-- Content Section -->
             <div class="col-sm-12 col-md-12 col-lg-6 split-content"> 
                 <div class="container-fluid container-custom">
@@ -98,6 +107,7 @@
                         <div class="container ui-container">
                             <div class="row">
                                 <div class="col-12">
+                                    <!-- Projects -->
                                     <div class="container">
                                         <!-- Sign Up page-->
                                         <div class="row ui-row">
@@ -125,7 +135,7 @@
                                                 </p>
                                             </div>
                                             <div class="col-sm-12 col-md-8 ui-image">
-                                            <img src="assets/images/franciska_du_toit_ui_payment.png" class="ui-img" alt="app payment page">
+                                                <img src="assets/images/franciska_du_toit_ui_payment.png" class="ui-img" alt="app payment page">
                                             </div>
                                         </div>
                                         <!-- Payment page end-->
@@ -140,7 +150,7 @@
                                                 </p>
                                             </div>
                                             <div class="col-sm-12 col-md-8 ui-image">
-                                            <img src="assets/images/franciska_du_toit_ui_landing.png" class="ui-img" alt="wine e-commerce app screen">
+                                                <img src="assets/images/franciska_du_toit_ui_landing.png" class="ui-img" alt="wine e-commerce app screen">
                                             </div>
                                         </div>
                                         <!-- Landing page end-->
@@ -155,7 +165,7 @@
                                                 </p>
                                             </div>
                                             <div class="col-sm-12 col-md-8 ui-image">
-                                            <img src="assets/images/franciska_du_toit_ui_calculator.png" class="ui-img" alt="calculator screen">
+                                                <img src="assets/images/franciska_du_toit_ui_calculator.png" class="ui-img" alt="calculator screen">
                                             </div>
                                         </div>
                                         <!-- Calculator end -->
@@ -170,7 +180,7 @@
                                                 </p>
                                             </div>
                                             <div class="col-sm-12 col-md-8 ui-image">
-                                            <img src="assets/images/franciska_du_toit_ui_profile.png" class="ui-img" alt="app profile">
+                                                <img src="assets/images/franciska_du_toit_ui_profile.png" class="ui-img" alt="app profile">
                                             </div>
                                         </div>
                                         <!-- Profile page -->
@@ -184,11 +194,12 @@
                                                 </p>
                                             </div>
                                             <div class="col-sm-12 col-md-8 ui-image">
-                                            <img src="assets/images/franciska_du_toit_ui_setting.png" class="ui-img" alt="app setting screen">
+                                                <img src="assets/images/franciska_du_toit_ui_setting.png" class="ui-img" alt="app setting screen">
                                             </div>
                                         </div>
                                         <!-- Profile page -->
                                     </div>
+                                    <!-- Projects -->
                                 </div>
                             </div>
                         </div>
@@ -203,6 +214,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/js/bootstrap.min.js"></script>
-<!-- Scripts End -->   
+<!-- Scripts End -->    
 </body>
 </html>
