--- a/uxcasestudies.html
+++ b/uxcasestudies.html
@@ -64,43 +64,57 @@
 			<div class="col-sm-12 col-md-12 col-lg-6" id="home"> 
                 <!-- Hero-image -->
 				<div class="row">
-					<img class="banner-image" src="./assets/images/franciska_du_toit_uxpage.png"/>
+					<img class="banner-image" src="./assets/images/franciska_du_toit_codingprojects.jpg"/>
                 </div>
                 <!-- Hero-image end -->
                 <!-- Social Banner -->
                 <div class="row banner-imager-social" >
                     <div class="col-3 col-sm-3 col-md-2">
-                        <a href="https://www.linkedin.com/in/franciskadutoit" target="_blank" rel="noopener noreferrer"> <i class="fab fa-linkedin-in" aria-hidden="true"></i> <span class="sr-only">Linkedin</span></a>
+                        <a href="https://www.linkedin.com/in/franciskadutoit" target="_blank" rel="noopener noreferrer"> <i class="fab fa-linkedin-in" aria-hidden="true"></i>
+                            <span class="sr-only">Linkedin</span>
+                        </a>
                     </div>
                     <div class="col-3 col-sm-3 col-md-2">
-                        <a href="https://www.instagram.com/designed.byfranciska/" target="_blank" rel="noopener noreferrer"> <i class="fab fa-instagram " aria-hidden="true"></i> <span class="sr-only">Instagram</span></a> 
+                        <a href="https://www.instagram.com/designed.byfranciska/" target="_blank" rel="noopener noreferrer"> <i class="fab fa-instagram " aria-hidden="true"></i> 
+                            <span class="sr-only">Instagram</span>
+                        </a> 
                     </div>
                     <div class="col-3 col-sm-3 col-md-2">
-                        <a href="https://twitter.com/FranciskaDuToit" target="_blank" rel="noopener noreferrer"> <i class="fab fa-twitter " aria-hidden="true"></i> <span class="sr-only">Twitter</span></a> 
+                        <a href="https://twitter.com/FranciskaDuToit" target="_blank" rel="noopener noreferrer"> <i class="fab fa-twitter " aria-hidden="true"></i> 
+                            <span class="sr-only">Twitter</span>
+                        </a> 
                     </div>
                     <div class="col-3 col-sm-3 col-md-2">
-                        <a href="https://www.pinterest.ie/franciskadtt/_saved/" target="_blank" rel="noopener noreferrer"> <i class="fab fa-pinterest-p " aria-hidden="true"></i> <span class="sr-only">Pinterest</span></a> 
+                        <a href="https://www.pinterest.ie/franciskadtt/_saved/" target="_blank" rel="noopener noreferrer"> <i class="fab fa-pinterest-p " aria-hidden="true"></i>
+                            <span class="sr-only">Pinterest</span>
+                        </a> 
                     </div>
                 </div>
                 <!-- Social Banner end -->
             </div>
             <!-- Banner section End -->
+
             <!-- Content Section -->
             <div class="col-sm-12 col-md-12 col-lg-6 split-content"> 
                 <div class="container-fluid container-custom">
                     <div class="row">
                         <div class="col-12">
-                        <div class="intro-content">
-                            <!-- Intro text end-->
-                            <h1 class="ux-heading" > UX Case Studies </h1>
-                            <p >Here you will find my UX Design case studies.  </p>
-                            <!-- Intro text end-->
-                        </div>
+                            <div class="intro-content">
+                                <!-- Intro text end-->
+                                <h1 class="ux-heading" > 
+                                UX Case Studies
+                                </h1>
+                                <p >Here you will find my UX Design case studies.
+                                </p>
+                                <!-- Intro text end-->
+                            </div>
                         </div>
                         <div class="container ui-container">
                             <div class="row">
                                 <div class="col-12">
+                                    <!-- Projects -->
                                     <div class="container">
+                                        <!-- Project Fly UX-->
                                         <div class="row ui-row">
                                             <div class="col-sm-12 col-md-8 ui-image">
                                                 <img src="assets/images/franciska_du_toit_flyuxmobile-project.png" class="ui-img" alt="app sign-up page">
@@ -111,10 +125,11 @@
                                                 <p class="ui-text">
                                                 Coming Soon – This case study is still being written
                                                 </p>
-                                                
                                             </div>
                                         </div>
+                                        <!-- Project Fly UX end -->
                                     </div>
+                                    <!-- Projects end -->
                                 </div>
                             </div>
                         </div>
@@ -125,10 +140,10 @@
         </div>
     </div>
 
-    <!-- Scripts -->   
+<!-- Scripts -->   
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/js/bootstrap.min.js"></script>
-<!-- Scripts End -->   
+<!-- Scripts End -->     
 </body>
 </html>
