Fix indentation and structure for uichallenges file

--- a/uichallenges.html
+++ b/uichallenges.html
@@ -197,9 +197,9 @@
                                                 <img src="assets/images/franciska_du_toit_ui_setting.png" class="ui-img" alt="app setting screen">
                                             </div>
                                         </div>
-                                        <!-- Profile page -->
+                                        <!-- Profile page end -->
                                     </div>
-                                    <!-- Projects -->
+                                    <!-- Projects end -->
                                 </div>
                             </div>
                         </div>
