Fix indentation and structure for contact file

--- a/contact.html
+++ b/contact.html
@@ -70,70 +70,67 @@
             </div>
             <!-- Banner section End -->
 
-    <!-- Content section -->
-    <div class="col-sm-12 col-md-12 col-lg-6 split-content"> 
+            <!-- Content section -->
+            <div class="col-sm-12 col-md-12 col-lg-6 split-content"> 
                 <div class="container-fluid container-custom">
                     <div class="row">
                         <div class="col-sm-12 intro-content">
                             <!-- Content form heading -->
-                        <div >
                             <h1 class="contact-heading">
                             Get in touch 
                             </h1>
-                        </div>
-                        <!-- Content form heading -->
-                        <!-- Form -->
-                        <div class="form-container">
-                            <form>
+                            <!-- Content form heading end -->
+                            <!-- Form -->
+                            <form class="form-container">
                                 <input type="text" name="name" id="fullname" class="form-control" placeholder="Name" required="">
                                 <input type="email" name="email" id="emailaddress" class="form-control" placeholder="Email" required="">
                                 <input type="text" name="subject" id="subject" class="form-control" placeholder="Subject" required="">
                                 <textarea rows="3" name="message" id="message" class="form-control" placeholder="Message" required=""></textarea>
                                 <div class="form-row text-center">
                                     <div class="col contact-btn-container">
-                                    <button type="submit" class="btn contact-btn">Send Message</button>
+                                        <button type="submit" class="btn contact-btn">
+                                        Send Message
+                                        </button>
                                     </div>
                                 </div>
-                                
-                            </form>
-                        </div>
-                        <!-- Form End -->
-                        <!-- Linkedin contact link -->
-                        <div class="msg-btn-container" >
-                            <div class="btn" id="msg-btn" >
-                                <a href="https://www.linkedin.com/in/franciskadutoit" target="_blank" rel="noopener noreferrer" class="list-btn-item list-btn-item-secondary ">Message me on LinkedIn
-                                </a>
+                            </form >
+                            <!-- Form End -->
+                            <!-- Linkedin contact link -->
+                            <div class="msg-btn-container" >
+                                <div class="btn" id="msg-btn" >
+                                    <a href="https://www.linkedin.com/in/franciskadutoit" target="_blank" rel="noopener noreferrer" class="list-btn-item list-btn-item-secondary ">Message me on LinkedIn
+                                    </a>
+                                </div>
                             </div>
+                            <!-- Linkedin contact link end -->
+                            <!-- Social Banner -->
+                            <div class="row banner-imager-social-contact" id="social-banner-hide-sm">
+                                <div class="col-3 col-sm-3 col-md-2">
+                                    <a href="https://www.linkedin.com/in/franciskadutoit" target="_blank"> <i class="fab fa-linkedin-in "></i> </a>
+                                </div>
+                                <div class="col-3 col-sm-3 col-md-2">
+                                    <a href="https://www.instagram.com/designed.byfranciska/" target="_blank"> <i class="fab fa-instagram "></i> </a> 
+                                </div>
+                                <div class="col-3 col-sm-3 col-md-2">
+                                    <a href="https://twitter.com/FranciskaDuToit" target="_blank"> <i class="fab fa-twitter "></i> </a> 
+                                </div>
+                                <div class="col-3 col-sm-3 col-md-2">
+                                    <a href="https://www.pinterest.ie/franciskadtt/_saved/" target="_blank"> <i class="fab fa-pinterest-p "></i> </a> 
+                                </div>
+                            </div>
+                            <!-- Social Banner end -->
                         </div>
-                        <!-- Linkedin contact link end -->
-                        <!-- Social Banner -->
-                <div class="row banner-imager-social" >
-                    <div class="col-3 col-sm-3 col-md-2">
-                        <a href="https://www.linkedin.com/in/franciskadutoit" target="_blank" rel="noopener noreferrer"> <i class="fab fa-linkedin-in" aria-hidden="true"></i> <span class="sr-only">Linkedin</span></a>
                     </div>
-                    <div class="col-3 col-sm-3 col-md-2">
-                        <a href="https://www.instagram.com/designed.byfranciska/" target="_blank" rel="noopener noreferrer"> <i class="fab fa-instagram " aria-hidden="true"></i> <span class="sr-only">Instagram</span></a> 
-                    </div>
-                    <div class="col-3 col-sm-3 col-md-2">
-                        <a href="https://twitter.com/FranciskaDuToit" target="_blank" rel="noopener noreferrer"> <i class="fab fa-twitter " aria-hidden="true"></i> <span class="sr-only">Twitter</span></a> 
-                    </div>
-                    <div class="col-3 col-sm-3 col-md-2">
-                        <a href="https://www.pinterest.ie/franciskadtt/_saved/" target="_blank" rel="noopener noreferrer"> <i class="fab fa-pinterest-p " aria-hidden="true"></i> <span class="sr-only">Pinterest</span></a> 
-                    </div>
-                </div>
-                <!-- Social Banner end -->
-                    </div>
-                </div>
-            </div>         
+                </div>         
+            </div>
+            <!-- Content section end -->
         </div>
-        <!-- Content section end -->
-    </div>
     </div>
 
 <!-- Scripts -->   
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/js/bootstrap.min.js"></script>
-<!-- Scripts End -->   
+<!-- Scripts End -->    
 </body>
 </html>
