--- a/contact.html
+++ b/contact.html
@@ -67,6 +67,20 @@
 					<img class="banner-image" src="./assets/images/franciska_du_toit_contactpage.jpg"/>
                 </div>
                 <!-- Hero-image end -->
+                <div class="row banner-imager-social-contact " id="social-banner-hide-lg">
+                    <div class="col-3 col-sm-3 col-md-2">
+                        <a href="https://www.linkedin.com/in/franciskadutoit" target="_blank" rel="noopener noreferrer"> <i class="fab fa-linkedin-in "></i> </a>
+                    </div>
+                    <div class="col-3 col-sm-3 col-md-2">
+                        <a href="https://www.instagram.com/designed.byfranciska/" target="_blank" rel="noopener noreferrer"> <i class="fab fa-instagram "></i> </a> 
+                    </div>
+                    <div class="col-3 col-sm-3 col-md-2">
+                        <a href="https://twitter.com/FranciskaDuToit" target="_blank" rel="noopener noreferrer"> <i class="fab fa-twitter "></i> </a> 
+                    </div>
+                    <div class="col-3 col-sm-3 col-md-2">
+                        <a href="https://www.pinterest.ie/franciskadtt/_saved/" target="_blank" rel="noopener noreferrer"> <i class="fab fa-pinterest-p "></i> </a> 
+                    </div>
+                </div>
             </div>
             <!-- Banner section End -->
 
@@ -106,16 +120,16 @@
                             <!-- Social Banner -->
                             <div class="row banner-imager-social-contact" id="social-banner-hide-sm">
                                 <div class="col-3 col-sm-3 col-md-2">
-                                    <a href="https://www.linkedin.com/in/franciskadutoit" target="_blank"> <i class="fab fa-linkedin-in "></i> </a>
+                                    <a href="https://www.linkedin.com/in/franciskadutoit" target="_blank" rel="noopener noreferrer"> <i class="fab fa-linkedin-in "></i> </a>
                                 </div>
                                 <div class="col-3 col-sm-3 col-md-2">
-                                    <a href="https://www.instagram.com/designed.byfranciska/" target="_blank"> <i class="fab fa-instagram "></i> </a> 
+                                    <a href="https://www.instagram.com/designed.byfranciska/" target="_blank" rel="noopener noreferrer"> <i class="fab fa-instagram "></i> </a> 
                                 </div>
                                 <div class="col-3 col-sm-3 col-md-2">
-                                    <a href="https://twitter.com/FranciskaDuToit" target="_blank"> <i class="fab fa-twitter "></i> </a> 
+                                    <a href="https://twitter.com/FranciskaDuToit" target="_blank" rel="noopener noreferrer"> <i class="fab fa-twitter "></i> </a> 
                                 </div>
                                 <div class="col-3 col-sm-3 col-md-2">
-                                    <a href="https://www.pinterest.ie/franciskadtt/_saved/" target="_blank"> <i class="fab fa-pinterest-p "></i> </a> 
+                                    <a href="https://www.pinterest.ie/franciskadtt/_saved/" target="_blank" rel="noopener noreferrer"> <i class="fab fa-pinterest-p "></i> </a> 
                                 </div>
                             </div>
                             <!-- Social Banner end -->
