--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                         <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
                             <a class="dropdown-item" href="uichallenges.html">UI Challenges</a>
                             <a class="dropdown-item" href="uxcasestudies.html">UX Case Studies</a>
-                            <a class="dropdown-item" href="developerprojects.html">Developer Portfolio</a>
+                            <a class="dropdown-item" href="developer-projects.html">Developer Portfolio</a>
                             <a class="dropdown-item" href="otherprojects.html">Other Projects</a>
                         </div>
                     </li>
@@ -177,7 +177,7 @@
                                     <a href="uxcasestudies.html" class="hvr-sweep-to-bottom"><span>UX Case Studies</span></a>
                                 </li>
                                 <li class="col-6 list-inline-item menu-color-code menu-item">
-                                    <a href="developerprojects.html" class="hvr-sweep-to-bottom"><span>Developer Portfolio</span></a>
+                                    <a href="developer-projects.html" class="hvr-sweep-to-bottom"><span>Developer Portfolio</span></a>
                                 </li>
                                 <li class="col-6 list-inline-item menu-color-other menu-item">
                                     <a href="otherprojects.html" class="hvr-sweep-to-bottom"><span>Other Projects</span></a>
