Update page name for developer-projects page on all pages

--- a/developer-projects.html
+++ b/developer-projects.html
@@ -41,7 +41,7 @@
                         <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
                             <a class="dropdown-item" href="uichallenges.html">UI Challenges</a>
                             <a class="dropdown-item" href="uxcasestudies.html">UX Case Studies</a>
-                            <a class="dropdown-item" href="developer-projects.html">Developer Portfolio</a>
+                            <a class="dropdown-item" href="developer-projects.html">Developer Projects</a>
                             <a class="dropdown-item" href="otherprojects.html">Other Projects</a>
                         </div>
                     </li>
@@ -101,7 +101,7 @@
                         <div class="col-12">
                             <div class="intro-content">
                                 <!-- Intro text end-->
-                                <h1 class="ux-heading" > Developer portfolio </h1>
+                                <h1 class="ux-heading" > Developer Projects </h1>
                                 <p > I have recently started my journey as a software developer. Check out my latest software development portfolio projects</p>
                                 <!-- Intro text end-->
                             </div>
