--- a/other-projects.html
+++ b/other-projects.html
@@ -42,7 +42,7 @@
                             <a class="dropdown-item" href="uichallenges.html">UI Challenges</a>
                             <a class="dropdown-item" href="uxcasestudies.html">UX Case Studies</a>
                             <a class="dropdown-item" href="developer-projects.html">Developer Projects</a>
-                            <a class="dropdown-item" href="otherprojects.html">Other Projects</a>
+                            <a class="dropdown-item" href="other-projects.html">Other Projects</a>
                         </div>
                     </li>
 					<li class="nav-item">
