--- a/developer-projects.html
+++ b/developer-projects.html
@@ -39,7 +39,7 @@
                         <a class=" dropdown-toggle nav-link" href="#portfolio" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Portfolio
                         </a>
                         <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                            <a class="dropdown-item" href="uichallenges.html">UI Challenges</a>
+                            <a class="dropdown-item" href="ui-challenges.html">UI Challenges</a>
                             <a class="dropdown-item" href="uxcasestudies.html">UX Case Studies</a>
                             <a class="dropdown-item" href="developer-projects.html">Developer Projects</a>
                             <a class="dropdown-item" href="other-projects.html">Other Projects</a>
