--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                         <a class=" dropdown-toggle nav-link" href="#portfolio" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Portfolio
                         </a>
                         <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                            <a class="dropdown-item" href="uichallenges.html">UI Challenges</a>
+                            <a class="dropdown-item" href="ui-challenges.html">UI Challenges</a>
                             <a class="dropdown-item" href="uxcasestudies.html">UX Case Studies</a>
                             <a class="dropdown-item" href="developer-projects.html">Developer Projects</a>
                             <a class="dropdown-item" href="other-projects.html">Other Projects</a>
@@ -171,7 +171,7 @@
                         <div class="col nav-container">
                             <ul id="nav" class="list-inline menucontainer">
                                 <li class="col-6 list-inline-item menu-color-ui menu-item-dark">
-                                    <a href="uichallenges.html" class="hvr-sweep-to-bottom"><span>UI Challenges</span></a>
+                                    <a href="ui-challenges.html" class="hvr-sweep-to-bottom"><span>UI Challenges</span></a>
                                 </li>
                                 <li class="col-6 list-inline-item menu-color-ux menu-item-dark ">
                                     <a href="uxcasestudies.html" class="hvr-sweep-to-bottom"><span>UX Case Studies</span></a>
