Update page link to other-projects page on home page in block nav

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                                     <a href="developer-projects.html" class="hvr-sweep-to-bottom"><span>Developer Projects</span></a>
                                 </li>
                                 <li class="col-6 list-inline-item menu-color-other menu-item">
-                                    <a href="otherprojects.html" class="hvr-sweep-to-bottom"><span>Other Projects</span></a>
+                                    <a href="other-projects.html" class="hvr-sweep-to-bottom"><span>Other Projects</span></a>
                                 </li>
                             </ul>
                         </div>
